# CARE_ASSISTANT

./: .dockerignore  .env.example  .gitignore  Dockerfile  FULL_DUMP.md  PROMPT_AUDIT.md  RULES.md  audit_features.sh  collect_doctor_dump.sh  collect_dump.sh  collect_dump_v2.sh  collect_full_dump.sh  docker-compose.yml  main.py  requirements.txt  run_bot.py  run_doctor.py  start_all.sh
app_config/: prompts.py  settings.py
config/: doctor.json  keyboards.json  onboarding.json  patcher_rules.json  replies.json
data/: audit_features_20260506_020552.txt  audit_features_20260506_020832.txt  audit_report.txt  doctor_knowledge.json  test_gemini_check.py
db/: connection.py  repository.py
doctor_core/: doctor_system.py
engine/: doctor_monitor.py  menu_engine.py  onboarding_engine.py  smart_patcher.py
handlers/: check.py  diet.py  economy.py  feedback.py  guests.py  hobby.py  menu.py  message.py  mood.py  notes.py  onboarding.py  overlay.py  plan.py  profile.py  recipes.py  share.py  shopping.py  shopping_tracker.py  start.py  water.py
keyboards/: reply.py
leviathan-core/: pyproject.toml
leviathan-core/leviathan/: __init__.py
leviathan-core/leviathan/core/: __init__.py  orchestrator.py
leviathan-core/leviathan/core/security/: __init__.py  firewall.py  normalizer.py  sanitizer.py
leviathan-core/leviathan/doctor/: __init__.py  __main__.py  doctor_system.py  knowledge_base.py  smart_patcher.py
leviathan-core/leviathan/memory/: __init__.py  storage.py
models/: schemas.py
services/: companion.py  diet_planner.py  fsm_storage.py  gemini.py  menu_planner.py  (+9 more)
(+2 files in other folders)
