[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leviathan-core"
version = "0.1.0"
description = "LEVIATHAN Core — KeyPool, EventBus, Doctor System, Security"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["leviathan"]
